[tool.poetry]
name = "Practicas-data-science-pandas-machine-learnings"
version = "0.1.0"
description = "\"una breve descripcion de mi proyecto+"
authors = ["peiti"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
numpy = "1.21.0"
pandas = "1.3.0"
scipy = "1.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "6.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
